cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(EEPROM C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_executable(EEPROM EEPROM.c)
pico_enable_stdio_usb(EEPROM 1)
pico_enable_stdio_uart(EEPROM 1)
pico_add_extra_outputs(EEPROM)
target_link_libraries(EEPROM pico_stdlib)
